--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,15 @@
-# Compiled class file
-*.class
+.idea/
+.vscode/
+*.swp
+*.swo
 
-# Log file
+.DS_Store
+Thumbs.db
+
+.env
+.env.local
+.env.*.local
+*.local
+
 *.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+logs/
