refactor: Route all frontend requests through API Gateway
Frontend changes:
- Simplified axios.ts to use single API_GATEWAY_URL (localhost:8080)
- Removed individual service URLs (auth, user, payment, notification)
- Updated authApi.ts to use unified api instance
- OAuth URLs now route through gateway (/oauth2/authorization/*)
- Simplified api/index.ts exports

API Gateway changes:
- Added spring-cloud-starter-loadbalancer dependency for lb:// URIs
- Created GatewayRoutesConfig.java with programmatic route definitions
- Created CorsConfig.java to handle CORS centrally
- Simplified application.yaml (routes/CORS now in Java config)
- Added config import for optional config server

Auth Service changes:
- Disabled CORS in SecurityConfig.java to avoid duplicate headers
- CORS is now handled exclusively by API Gateway

This architecture ensures:
- Single entry point for all API calls
- Centralized CORS handling
- Gateway handles routing, load balancing, and cross-cutting concerns
- Cleaner frontend configuration (one URL to manage)

--- a/backend/api-gateway/pom.xml
+++ b/backend/api-gateway/pom.xml
@@ -20,6 +20,12 @@
             <artifactId>spring-cloud-starter-gateway-server-webmvc</artifactId>
         </dependency>
 
+        <!-- Load Balancer for lb:// URIs -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-loadbalancer</artifactId>
+        </dependency>
+
         <!-- Service Discovery -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
