--- a/backend/api-gateway/src/main/resources/application.yaml
+++ b/backend/api-gateway/src/main/resources/application.yaml
@@ -9,66 +9,21 @@ spring:
   application:
     name: api-gateway
 
+  config:
+    import: "optional:configserver:"
+
   cloud:
+    config:
+      enabled: false
+
     gateway:
       discovery:
         locator:
           enabled: true
           lower-case-service-id: true
-      default-filters:
-        - DedupeResponseHeader=Access-Control-Allow-Credentials Access-Control-Allow-Origin
-      globalcors:
-        cors-configurations:
-          '[/**]':
-            allowed-origins:
-              - "http://localhost:5173"
-              - "http://localhost:3000"
-            allowed-methods:
-              - GET
-              - POST
-              - PUT
-              - DELETE
-              - PATCH
-              - OPTIONS
-            allowed-headers: "*"
-            allow-credentials: true
-            max-age: 3600
 
-      routes:
-        - id: auth-service
-          uri: lb://auth-service
-          predicates:
-            - Path=/api/v1/auth/**
-
-        - id: oauth2-authorization
-          uri: lb://auth-service
-          predicates:
-            - Path=/oauth2/**
-
-        - id: oauth2-callback
-          uri: lb://auth-service
-          predicates:
-            - Path=/login/oauth2/**
-
-        - id: user-service
-          uri: lb://user-service
-          predicates:
-            - Path=/api/v1/users/**
-
-        - id: payment-service
-          uri: lb://payment-service
-          predicates:
-            - Path=/api/v1/payments/**
-
-        - id: transaction-service
-          uri: lb://transaction-service
-          predicates:
-            - Path=/api/v1/transactions/**
-
-        - id: notification-service
-          uri: lb://notification-service
-          predicates:
-            - Path=/api/v1/notifications/**
+# Routes are defined programmatically in GatewayRoutesConfig.java
+# CORS is handled by CorsConfig.java
 
 eureka:
   client:
@@ -93,4 +48,5 @@ management:
 logging:
   level:
     org.springframework.cloud.gateway: DEBUG
+    org.springframework.cloud.gateway.server.mvc: DEBUG
     com.finpay.gateway: DEBUG
