feat: Add Kafka event-driven architecture for money transfers
Backend - Kafka Integration:
- Configure Apache Kafka in KRaft mode (no Zookeeper dependency)
- Add Kafka topics: user-events, wallet-commands, wallet-responses, transfer-notifications
- Implement event producers and consumers across microservices

Auth Service:
- Add local UserCredential entity and repository for credentials storage
- Publish UserRegisteredEvent to Kafka on user registration
- Remove synchronous Feign client dependency on user-service
- Add KafkaProducerConfig for event publishing

User Service:
- Add UserEventProducer for publishing user registration events
- Consume UserRegisteredEvent to create user profiles
- Add user search endpoint for recipient selection

Payment Service:
- Implement MoneyTransfer entity and SAGA orchestration
- Add MoneyTransferController with transfer endpoints
- Create TransferSagaOrchestrator for coordinating wallet operations
- Publish WalletCommandEvent and consume WalletResponseEvent
- Add transfer history endpoint

Wallet Service:
- Implement complete wallet-service microservice
- Add Wallet entity with balance, reservedBalance tracking
- Consume WalletCommandEvent for reserve/deduct/credit operations
- Implement SAGA compensation (release/reverse operations)
- Auto-create wallets with demo balance on first access

Notification Service:
- Add TransferNotificationConsumer for transfer events
- Disable mail health check (SSL certificate issue)

Infrastructure:
- Update docker-compose.yml with Kafka internal listener (29092)
- Configure Kafka UI to connect via internal network
- Update MySQL init.sql with wallet and transfer tables

Frontend:
- Separate walletApi from paymentApi
- Fix API routing (/api/v1/wallets vs /api/v1/payments)
- Clean up redundant comments

--- a/backend/auth-service/src/main/resources/application.yaml
+++ b/backend/auth-service/src/main/resources/application.yaml
@@ -75,14 +75,12 @@ eureka:
     prefer-ip-address: true
     instance-id: ${spring.application.name}:${random.uuid}
 
-# Feign client configuration
-feign:
-  client:
-    config:
-      default:
-        connectTimeout: 5000
-        readTimeout: 5000
-        loggerLevel: basic
+# Kafka Configuration
+spring.kafka:
+  bootstrap-servers: localhost:9092
+  producer:
+    key-serializer: org.apache.kafka.common.serialization.StringSerializer
+    value-serializer: org.apache.kafka.common.serialization.StringSerializer
 
 management:
   endpoints:
