--- a/backend/notification-service/src/main/resources/application.yaml
+++ b/backend/notification-service/src/main/resources/application.yaml
@@ -82,6 +82,9 @@ management:
   endpoint:
     health:
       show-details: always
+  health:
+    mail:
+      enabled: false
 
 logging:
   level:
