--- a/backend/payment-service/src/main/resources/application.yaml
+++ b/backend/payment-service/src/main/resources/application.yaml
@@ -42,6 +42,10 @@ spring:
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
 
+# Wallet Service Client Configuration
+wallet-service:
+  url: http://wallet-service
+
 eureka:
   client:
     service-url:
