--- a/backend/auth-service/pom.xml
+++ b/backend/auth-service/pom.xml
@@ -102,10 +102,10 @@
             <artifactId>spring-cloud-starter-config</artifactId>
         </dependency>
 
-        <!-- OpenFeign for inter-service communication -->
+        <!-- Kafka for event-driven messaging -->
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-openfeign</artifactId>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
         </dependency>
 
         <!-- H2 for testing -->
