--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -23,6 +23,7 @@
         <module>auth-service</module>
         <module>user-service</module>
         <module>payment-service</module>
+        <module>wallet-service</module>
         <module>notification-service</module>
     </modules>
 
