feat: real-time notification system with WebSocket push
Backend (Spring Boot / notification-service):
- Add STOMP-over-WebSocket endpoint at /ws with in-memory broker
- WebSocketAuthInterceptor extracts userId from STOMP CONNECT headers
  and sets it as Principal for user-destination routing
- WebSocketNotificationService pushes notifications and unread counts
  to individual users via SimpMessagingTemplate.convertAndSendToUser()
- NotificationService now triggers WebSocket push on PUSH/IN_APP
  channel delivery and after mark-as-read/mark-all-as-read operations
- Removed duplicate CorsConfig (API Gateway already handles CORS;
  WebSocket CORS is configured in WebSocketConfig.setAllowedOrigins)

Frontend (React / @stomp/stompjs):
- useWebSocket hook manages STOMP connection lifecycle with auto-reconnect,
  subscribes to /user/queue/notifications and /user/queue/unread-count,
  and updates TanStack Query cache in-place on incoming messages
- useNotifications hooks with optimistic updates for mark-as-read
  mutations and 60s fallback polling for unread count
- NotificationBell with animated unread badge and connection indicator
- NotificationPanel with grouped notifications (Today/Yesterday/Earlier),
  per-item mark-as-read, and mark-all-read
- NotificationToast with auto-dismiss progress bar (max 4 toasts)
- NotificationProvider wires WebSocket + toast state for the dashboard
- NotificationContext moved to src/contexts/ for project consistency
- REST API client (notificationApi.ts) with full CRUD + preferences
- DashboardHeader made sticky with proper z-index stacking context

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@stomp/stompjs": "^7.3.0",
     "@tanstack/react-query": "^5.90.20",
     "axios": "^1.7.9",
     "framer-motion": "^11.18.0",
