--- a/backend/notification-service/pom.xml
+++ b/backend/notification-service/pom.xml
@@ -69,6 +69,12 @@
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
 
+        <!-- WebSocket for real-time push notifications -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
+
         <!-- Kafka Test -->
         <dependency>
             <groupId>org.springframework.kafka</groupId>
