feat: add user settings page with profile editing and notification preferences
## Settings Page (Frontend)
- Add tabbed Settings page (/settings) with Profile and Notifications tabs
- Wire gear icon in DashboardHeader to navigate to /settings
- Use React Router v6 layout routes with shared AuthenticatedLayout
- Lift NotificationProvider to App level so WebSocket stays connected
  across dashboard and settings page navigations

## Profile Editing
- Add ProfileTab with full form: name, email, phone, address fields
- Add ProfileImageUpload component with Cloudinary integration
- Display profile image in dashboard header avatar (with initials fallback)
- Add userApi.ts with getProfile, updateProfile, uploadProfileImage,
  deleteProfileImage endpoints

## Cloudinary Integration (user-service)
- Add CloudinaryConfig reading env vars (cloud-name, api-key, api-secret)
- Add CloudinaryService for upload (face-detect crop 400x400) and delete
- Add POST/DELETE /{id}/profile-image endpoints to UserController
- Add updateProfileImage method to UserService with Kafka event publishing
- Add cloudinary-http5 2.0.0 dependency and multipart config (5MB limit)

## Notification Preferences with Kafka
- Add NotificationPreferencesTab with toggle switches for 4 channels
  (email, SMS, push, in-app) and 4 types (payment, security, promo, system)
- Add notification-preference-events Kafka topic (3 partitions)
- Add NotificationPreferenceEvent record and EventProducer
- Add PreferenceEventConsumer that sends IN_APP confirmation on pref change
- Update NotificationService.updatePreferences to publish Kafka events
- Add KafkaTemplate and ProducerFactory to notification-service config

## Auth-Service /me Endpoint Enrichment
- Add UserServiceClient using LoadBalancerClient + RestClient for manual
  Eureka service resolution (avoids @LoadBalanced circular dependency)
- Add RestClientConfig with plain RestClient bean
- Update AuthService.getCurrentUser() to fetch full profile from
  user-service

--- a/backend/user-service/src/main/resources/application.yaml
+++ b/backend/user-service/src/main/resources/application.yaml
@@ -31,6 +31,11 @@ spring:
         dialect: org.hibernate.dialect.MySQLDialect
         format_sql: true
 
+  servlet:
+    multipart:
+      max-file-size: 5MB
+      max-request-size: 5MB
+
   kafka:
     bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
     producer:
@@ -65,3 +70,8 @@ logging:
   level:
     com.finpay.user: DEBUG
     org.springframework.kafka: INFO
+
+cloudinary:
+  cloud-name: ${CLOUDINARY_CLOUD_NAME:}
+  api-key: ${CLOUDINARY_API_KEY:}
+  api-secret: ${CLOUDINARY_API_SECRET:}
