--- a/backend/user-service/pom.xml
+++ b/backend/user-service/pom.xml
@@ -57,6 +57,13 @@
             <artifactId>spring-kafka</artifactId>
         </dependency>
 
+        <!-- Cloudinary for image uploads -->
+        <dependency>
+            <groupId>com.cloudinary</groupId>
+            <artifactId>cloudinary-http5</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+
         <!-- Kafka Test -->
         <dependency>
             <groupId>org.springframework.kafka</groupId>
