feat: implement Kafka DLQ with retry mechanism
- Add KafkaRetryConfig (RetryTopicConfigurationSupport) to wallet, user, payment, notification services
- Configure combined blocking (3 attempts, 1s FixedBackOff) and non-blocking retries
- Add @RetryableTopic with exponential backoff (1s, 2s, 4s) to all 11 Kafka consumers
- Add @DltHandler to each consumer for dead letter topic processing
- Configure fatal exceptions (JsonProcessingException, IllegalArgumentException) to skip retries
- Add spring-retry dependency to parent POM
- Add TaskScheduler bean for non-blocking retry backoff scheduling

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -92,6 +92,12 @@
             <version>${mapstruct.version}</version>
         </dependency>
 
+        <!-- Spring Retry (required for @RetryableTopic non-blocking retries) -->
+        <dependency>
+            <groupId>org.springframework.retry</groupId>
+            <artifactId>spring-retry</artifactId>
+        </dependency>
+
         <!-- Test -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
