fix: standardize Kafka ObjectMapper, enum column types, and consumer idempotency
## Kafka ObjectMapper standardization
- Created KafkaMessageConfig in auth-service (was missing entirely)
- Added @Primary to kafkaObjectMapper bean in all 5 services
- Added FAIL_ON_UNKNOWN_PROPERTIES=false to all services for forward compatibility
- Fixed auth-service OutboxService: was injecting Spring default ObjectMapper (no
  JavaTimeModule) instead of kafkaObjectMapper  would serialize LocalDateTime as
  nested object instead of ISO-8601 string
- Fixed user-service OutboxService: field named 'objectMapper' was resolving to
  Spring default instead of the kafkaObjectMapper bean due to name mismatch
- All 5 services now consistently use the same Jackson configuration:
  JavaTimeModule + WRITE_DATES_AS_TIMESTAMPS=false + FAIL_ON_UNKNOWN_PROPERTIES=false

## Hibernate ENUM -> VARCHAR column type fix
- Hibernate 7.2 maps @Enumerated(EnumType.STRING) to native MySQL ENUM columns
- ddl-auto:update does NOT add new Java enum values to MySQL ENUM columns
- This caused 'Data truncated for column type' on insert when new enum values
  like BILL_PAYMENT_INITIATED were added to NotificationType
- Fix: added columnDefinition='VARCHAR(N)' to all @Enumerated fields across:
  - Notification (type/channel/status)
  - User (status/role/authProvider)
  - Wallet (status), WalletTransaction (type/status)
  - Payment, PaymentMethodEntity, MoneyTransfer, MoneyRequest, BillPayment
  - OutboxEvent.status in all 5 services
- This also resolved the 4x duplicate in-app notifications caused by
  @RetryableTopic retrying the failed DB insert 3 more times before DLT

## Consumer-side idempotency (Outbox Pattern completion)
- Added ProcessedEvent entity + repository to all 4 consuming services
- Added IdempotentConsumerService to all 4 consuming services
- Added X-Idempotency-Key Kafka header (outbox event UUID) in all 5 OutboxPublishers
- Updated all 10 Kafka consumers with check-before-process + mark-after-pro

--- a/backend/auth-service/src/main/resources/application.yaml
+++ b/backend/auth-service/src/main/resources/application.yaml
@@ -95,3 +95,8 @@ logging:
   level:
     com.finpay.auth: DEBUG
     org.springframework.security: DEBUG
+
+# Outbox Pattern Configuration
+outbox:
+  poll-interval-ms: ${OUTBOX_POLL_INTERVAL_MS:500}
+  cleanup-interval-ms: ${OUTBOX_CLEANUP_INTERVAL_MS:600000}
