--- a/backend/notification-service/src/test/resources/application-test.yaml
+++ b/backend/notification-service/src/test/resources/application-test.yaml
@@ -18,6 +18,11 @@ eureka:
   client:
     enabled: false
 
+# Disable outbox polling during tests
+outbox:
+  poll-interval-ms: 999999999
+  cleanup-interval-ms: 999999999
+
 notification:
   email:
     enabled: false
