--- a/backend/payment-service/src/test/resources/application-test.yaml
+++ b/backend/payment-service/src/test/resources/application-test.yaml
@@ -14,3 +14,8 @@ spring:
 eureka:
   client:
     enabled: false
+
+# Disable outbox polling during tests
+outbox:
+  poll-interval-ms: 999999999
+  cleanup-interval-ms: 999999999
