--- a/backend/wallet-service/src/main/resources/application.yaml
+++ b/backend/wallet-service/src/main/resources/application.yaml
@@ -65,3 +65,8 @@ logging:
   level:
     com.finpay.wallet: DEBUG
     org.springframework.kafka: INFO
+
+# Outbox Pattern Configuration
+outbox:
+  poll-interval-ms: ${OUTBOX_POLL_INTERVAL_MS:500}
+  cleanup-interval-ms: ${OUTBOX_CLEANUP_INTERVAL_MS:600000}
