--- a/backend/wallet-service/src/test/resources/application-test.yaml
+++ b/backend/wallet-service/src/test/resources/application-test.yaml
@@ -20,6 +20,11 @@ eureka:
   client:
     enabled: false
 
+# Disable outbox polling during tests
+outbox:
+  poll-interval-ms: 999999999
+  cleanup-interval-ms: 999999999
+
 logging:
   level:
     com.finpay.wallet: DEBUG
