feat: extract outbox + idempotency into shared Spring Boot starter
Extract duplicated Transactional Outbox Pattern and Idempotent Consumer
infrastructure from 5 microservices (payment, wallet, notification, user,
auth) into a shared finpay-outbox-spring-boot-starter library module.

New module: backend/finpay-outbox-starter
- OutboxAutoConfiguration: auto-configures all beans via @AutoConfiguration
  with @AutoConfigurationPackage for additive JPA entity/repo scanning
- OutboxProperties: externalized config under finpay.outbox.* and
  finpay.idempotency.* with sensible defaults (batch-size, poll-interval,
  retention-days, etc.)
- OutboxEvent + ProcessedEvent: JPA entities for outbox_events and
  processed_events tables
- OutboxEventRepository + ProcessedEventRepository: Spring Data JPA repos
  with custom queries for polling, cleanup, and requeue
- OutboxService: transactional outbox event persistence (participates in
  caller's transaction via Propagation.REQUIRED)
- OutboxPublisher: scheduled poller that publishes pending events to Kafka
  with X-Idempotency-Key header, handles retries and cleanup
- IdempotentConsumerService: duplicate detection and scheduled cleanup
  for consumed Kafka messages
- OutboxKafkaMessageConfig: @Primary ObjectMapper with JavaTimeModule
  for Kafka JSON serialization
- OutboxKafkaRetryConfig: extensible Kafka retry/DLT config extending
  RetryTopicConfigurationSupport with blocking retries for transient
  exceptions and non-blocking retries via retry topics

Key design decisions:
- All beans guarded by @ConditionalOnMissingBean for service-level overrides
- OutboxKafkaRetryConfig registered as @AutoConfiguration (not a plain
  @Bean) so RetryTopicConfigurationSupport's internal @Bean methods are
  processed by Spring  fixes silent @RetryableTopic listener startup
  failure in services without a custom KafkaRetryConfig subclass
- additionalBlockingRetryExceptions() hook for service-specific exceptions
- Library JAR (no spring-boot-mave

--- a/backend/auth-service/pom.xml
+++ b/backend/auth-service/pom.xml
@@ -102,6 +102,12 @@
             <artifactId>spring-cloud-starter-config</artifactId>
         </dependency>
 
+        <!-- FinPay Outbox + Idempotency Starter -->
+        <dependency>
+            <groupId>com.finpay</groupId>
+            <artifactId>finpay-outbox-spring-boot-starter</artifactId>
+        </dependency>
+
         <!-- Kafka for event-driven messaging -->
         <dependency>
             <groupId>org.springframework.kafka</groupId>
