--- a/backend/notification-service/pom.xml
+++ b/backend/notification-service/pom.xml
@@ -51,13 +51,17 @@
             <artifactId>spring-cloud-starter-config</artifactId>
         </dependency>
 
+        <!-- FinPay Outbox + Idempotency Starter -->
+        <dependency>
+            <groupId>com.finpay</groupId>
+            <artifactId>finpay-outbox-spring-boot-starter</artifactId>
+        </dependency>
+
         <!-- Kafka -->
         <dependency>
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka</artifactId>
         </dependency>
-
-        <!-- Mail -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
