--- a/backend/payment-service/pom.xml
+++ b/backend/payment-service/pom.xml
@@ -51,6 +51,12 @@
             <artifactId>spring-cloud-starter-config</artifactId>
         </dependency>
 
+        <!-- FinPay Outbox + Idempotency Starter -->
+        <dependency>
+            <groupId>com.finpay</groupId>
+            <artifactId>finpay-outbox-spring-boot-starter</artifactId>
+        </dependency>
+
         <!-- Kafka -->
         <dependency>
             <groupId>org.springframework.kafka</groupId>
