--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -18,6 +18,7 @@
     <description>Parent POM for FinPay microservices platform</description>
 
     <modules>
+        <module>finpay-outbox-starter</module>
         <module>service-registry</module>
         <module>api-gateway</module>
         <module>auth-service</module>
@@ -52,6 +53,13 @@
                 <groupId>com.mysql</groupId>
                 <artifactId>mysql-connector-j</artifactId>
                 <version>${mysql.version}</version>
+            </dependency>
+
+            <!-- FinPay Outbox + Idempotency Starter -->
+            <dependency>
+                <groupId>com.finpay</groupId>
+                <artifactId>finpay-outbox-spring-boot-starter</artifactId>
+                <version>${project.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
